force-app/main/default/objects/OA_Slip__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>OA Slip</relationshipLabel>
    <relationshipName>OA_Slip</relationshipName>
    <type>Lookup</type>
</CustomField>