force-app/main/default/objects/OA_Slip__c/fields/Invoice_Line_Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item_Value__c</fullName>
    <label>Invoice Line Item Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>