force-app/main/default/objects/OA_Slip__c/fields/Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Status__c</fullName>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>To Be Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>