force-app/main/default/objects/OA_Slip__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>SFDC_Services_Project__c</referenceTo>
    <relationshipLabel>OA Slip</relationshipLabel>
    <relationshipName>OA_Slip</relationshipName>
    <type>Lookup</type>
</CustomField>