force-app/main/default/objects/OA_Slip__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The same picklist used in blng__Invoice__c 
If new value added in blng__Invoice__c &apos;s OA_Invoice_Type_FrmSvcBlngProcess__c needs to be updated.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>