force-app/main/default/objects/OA_Slip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OA_Invoice_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project__c</columns>
    <columns>Contract__c</columns>
    <columns>Product__c</columns>
    <columns>Resource__c</columns>
    <columns>Job_Code_Resource_Role__c</columns>
    <columns>Hour__c</columns>
    <columns>Total__c</columns>
    <columns>Processed__c</columns>
    <columns>Minute__c</columns>
    <columns>Order_Product__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>